# ChangeLog for media-libs/flac
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/flac/ChangeLog,v 1.138 2008/05/12 15:23:35 corsair Exp $

  12 May 2008; Markus Rothe <corsair@gentoo.org> flac-1.2.1-r2.ebuild:
  Stable on ppc64

  16 Mar 2008; Samuli Suominen <drac@gentoo.org> -flac-1.1.2-r8.ebuild,
  flac-1.2.1-r2.ebuild:
  amd64 stable. remove old for repoman, has unstable mips deps.

  21 Feb 2008; Samuli Suominen <drac@gentoo.org> flac-1.2.1-r2.ebuild:
  Use copy of m4 directory from gettext-0.17 to provide AM_ICONV for
  eautoreconf wrt #173464, thanks to Natanael Copa for reporting.

  10 Jan 2008; Samuli Suominen <drac@gentoo.org> flac-1.1.2-r8.ebuild,
  -flac-1.1.4.ebuild:
  Remove vulnerable version but leave one ebuild behind for mips wrt #195700

  18 Nov 2007; Alexis Ballier <aballier@gentoo.org>
  +files/flac-1.2.1-gcc-4.3-includes.patch, flac-1.2.1-r2.ebuild:
  fix building with gcc 4.3, thanks to Ryan Hill <dirtyepic@gentoo.org>, bug
  #199579

*flac-1.2.1-r2 (18 Nov 2007)

  18 Nov 2007; Alexis Ballier <aballier@gentoo.org> +flac-1.2.1-r2.ebuild:
  Make FLAC++ optional, enabled by default thanks to EAPI=1

  01 Nov 2007; Raúl Porcel <armin76@gentoo.org> flac-1.2.1-r1.ebuild:
  sparc stable, thanks to Alex Maclean for testing

  24 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  flac-1.2.1-r1.ebuild:
  ppc stable, bug #195700

  23 Oct 2007; Markus Rothe <corsair@gentoo.org> flac-1.2.1-r1.ebuild:
  Stable on ppc64; bug #195700

  22 Oct 2007; Raúl Porcel <armin76@gentoo.org> flac-1.2.1-r1.ebuild:
  alpha/ia64 stable wrt #195700

  22 Oct 2007; Jeroen Roovers <jer@gentoo.org> flac-1.2.1-r1.ebuild:
  Reverting sparc stabilisation due to reverse dependencies I cannot test.

  22 Oct 2007; Jeroen Roovers <jer@gentoo.org> flac-1.2.1-r1.ebuild:
  Stable for HPPA and SPARC (bug #195700).

  21 Oct 2007; Steve Dibb <beandog@gentoo.org> flac-1.2.1-r1.ebuild: