@@ -2,12 +2,8 @@ AUX flac-1.2.1-asm.patch 2844 RMD160 7e2f1dbdf1dbe7c019089f5359f794123cb388f9 SH
 AUX flac-1.2.1-asneeded.patch 840 RMD160 42570f0d4c8bb6ff2f188e81952ac774fa9cfd0d SHA1 a87abf76cbc9db5cf65d6282cdfcf3b5cfcd329c SHA256 cb112fcc85fa57fb68e9fb0d1f735225132fb25b3cd41bb08febfc2d2154bb63
 AUX flac-1.2.1-cflags.patch 435 RMD160 49cb14f8c107fada76252a67e6ef693dcc0f82b1 SHA1 5698376e901679398b6dac850d8015b1386f1983 SHA256 cc9397825c966839edcd4a30406ff3590a21c825d4e1cb043bd35145a608bc21
 AUX flac-1.2.1-gcc-4.3-includes.patch 423 RMD160 d7502f5185e8b9bcefbadfa30014b91cc0446267 SHA1 7e9f8c2ef4d9daf5ddd20df63b608fe19b8c1560 SHA256 b9826946fb8372cf7da1b68538bce9a6069c1be0e6e288cba5522ce977a1d8d4
-DIST flac-1.1.2.tar.gz 1516235 RMD160 58656837b02e211eaed5010d84c4ed59841c82d3 SHA1 65501f3547df99b153951edb2ee7bfc13dd56946 SHA256 ce4f7d11b3c04a7368c916ca4abc284dd0c0256f461dfb7f07df1ab445e7a5c0
-DIST flac-1.2.1-eautoreconf-gettext-0.17-m4.tar.bz2 32381 RMD160 3662e0d74c802fa7399c64d19488126f40253188 SHA1 fea97a01d4cc9885fbd52d2549be8a950837cc7e SHA256 250c2bc2d3877671a97664c1cd47e39f48c14024522b553ee89a016988f68388
 DIST flac-1.2.1.tar.gz 2009217 RMD160 bd3223c848054f0a75d11200b30f903bdd375bfc SHA1 bd54354900181b59db3089347cc84ad81e410b38 SHA256 9635a44bceb478bbf2ee8a785cf6986fba525afb5fad1fd4bba73cf71f2d3edf
-DIST flac-patches-8.tar.bz2 7566 RMD160 57b3febba32e4383b580656418d815f671bff089 SHA1 281282c2477bf958416b887bbe0965d3d2703d36 SHA256 7ca7f86ae6e1b1d9318d66f8b2dc1dda9eed96a1761e407ebfd6e6a8d8de0923
-EBUILD flac-1.1.2-r8.ebuild 2041 RMD160 4978f3c5e5c1164f0a2ed9ffd3c6af69a1993ef4 SHA1 6083b2994945115eb178676ddcc50914f1f37fc7 SHA256 e3e0ba240bc5be7e078cc85c2af59a6f32458adaa3f3025164b4f078580d6e16
-EBUILD flac-1.2.1-r1.ebuild 1612 RMD160 c2ecbdb8e59c04b8010315206eae35c07ac2a31f SHA1 bfda65716c87893259b478b973e734b2174ce37e SHA256 e698057bb17553ff905b65da54c8128836b02ce18009b23f014effe055c47a9e
-EBUILD flac-1.2.1-r2.ebuild 1813 RMD160 cf11178ee2434e91883762d7dfa247f6ea8d567a SHA1 a67171a6ce317809a8949b67ec2d42fd4099c8c5 SHA256 004b3d71f0b4a8495380f0dad871af9dac88c7522f789f02cd107f97bccb2213
-MISC ChangeLog 19429 RMD160 8deb252e85815914ceef236c7c36c41529ea7127 SHA1 9015d4ad703de947b87970b8676d606e37c2e836 SHA256 044309af555af1185f38c28bd6179d32e65d4bbf57cc186283c2387094db8253
+EBUILD flac-1.2.1-r1.ebuild 1600 RMD160 a74e67f35c2a873ad4a7f253e0242770c2e38786 SHA1 cc6085f9d13def80896f47efd90543ebad404bc8 SHA256 6bc053c3d94d1322be1403d06927d133cd5f4b5fb2592852b8de0a959ccd2e5c
+EBUILD flac-1.2.1-r2.ebuild 1691 RMD160 564ca5b99ca8f90c612db4e02caf3436db8897d9 SHA1 f2807cb0d512bf2cc43a4ec7992a032820643a8a SHA256 b00fe13de5cf51e2ea0676bbb6579ff28ec4b8283a2891c1450b08c719993738
+MISC ChangeLog 19648 RMD160 677a5f588c311ff3efb93c6125a9fb9d2a823ad6 SHA1 cda9745efcc54fe7118fee2ec3562cd1629f6ab4 SHA256 3d9c9bdf40a64544739a2835fbe84efa9bbbb4116784d46c804573e75058df28
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
